fix overflow problem

--- a/src/sections/Hero/Hero.css
+++ b/src/sections/Hero/Hero.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: calc(100vh - 4rem);
     text-align: center;
     position: relative;
     background: url('/src/assets/img/hero-background.webp') center/cover no-repeat;
@@ -83,6 +83,10 @@
   
   /* Ajustes para pantallas más pequeñas */
   @media (max-width: 768px) {
+    .heroContainer {
+      padding: 1rem;
+    }
+
     .heroTitle {
       font-size: 2.5rem;
     }
